fixed background image cropping at bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,7 +68,7 @@ button {
 
     #switchLocation {
         border: .5px;
-        background: transparent;
+        background: white;
         color: black;
     }
 
